src/test/ui/feature-gates/feature-gate-allow_fail.stderr
error[E0658]: the `#[allow_fail]` attribute is an experimental feature
  --> $DIR/feature-gate-allow_fail.rs:3:1
   |
LL | #[allow_fail]
   | ^^^^^^^^^^^^^
   |
   = note: see issue #46488 <https://github.com/dust-lang/dust/issues/46488> for more information
   = help: add `#![feature(allow_fail)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
